--- a/res/layout/activity_register_me.xml
+++ b/res/layout/activity_register_me.xml
@@ -8,6 +8,15 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".RegisterMe" >
 
-    
+    <Button
+        android:id="@+id/onlyForTesting"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginLeft="45dp"
+        android:layout_marginTop="56dp"
+        android:text="CreatePacketExtension"
+        android:onClick="classFromXML" />
 
 </RelativeLayout>
