--- a/PubSubClient/res/layout/activity_register_me.xml
+++ b/PubSubClient/res/layout/activity_register_me.xml
@@ -19,4 +19,12 @@
         android:text="CreatePacketExtension"
         android:onClick="classFromXML" />
 
+    <TextView
+        android:id="@+id/textView1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/onlyForTesting"
+        android:layout_below="@+id/onlyForTesting"
+        android:text=" " />
+
 </RelativeLayout>
