--- a/res/menu/register_me.xml
+++ b/res/menu/register_me.xml
@@ -5,5 +5,10 @@
         android:orderInCategory="100"
         android:showAsAction="never"
         android:title="@string/action_settings"/>
+    
+    <item android:id="@+id/subscription"
+        android:title="@string/subscribe"
+        android:showAsAction="never">
+    </item>
 
 </menu>
