Data collection for accelerometer and activity recognition added
Having buttons for starting and stopping data collection. Would be based
on queries by server later.

--- a/PubSubClient/res/layout/activity_register_me.xml
+++ b/PubSubClient/res/layout/activity_register_me.xml
@@ -19,4 +19,21 @@
         android:text="@string/go_to_publish_query" 
         android:onClick="launchIntent"/>
 
+    <Button
+        android:id="@+id/button2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        android:text="@string/startRecording" />
+
+    <Button
+        android:id="@+id/button3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/button2"
+        android:layout_below="@+id/button2"
+        android:layout_marginTop="46dp"
+        android:text="@string/stopRecording" />
+
 </RelativeLayout>
