--- a/PubSubClient/res/layout/activity_register_me.xml
+++ b/PubSubClient/res/layout/activity_register_me.xml
@@ -9,31 +9,40 @@
     tools:context=".RegisterMe" >
 
     <Button
+        android:id="@+id/button4"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/button3"
+        android:layout_alignRight="@+id/button2"
+        android:layout_below="@+id/button3"
+        android:layout_marginTop="31dp"
+        android:text="Stop Listening to Requests" />
+
+    <Button
         android:id="@+id/button1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginLeft="52dp"
-        android:layout_marginTop="100dp"
-        android:text="@string/go_to_publish_query" 
-        android:onClick="launchIntent"/>
-
-    <Button
-        android:id="@+id/button2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
-        android:text="@string/startRecording" />
+        android:layout_above="@+id/button2"
+        android:layout_alignLeft="@+id/button2"
+        android:layout_alignRight="@+id/button2"
+        android:layout_marginBottom="39dp"
+        android:text="@string/go_to_publish_query" />
 
     <Button
         android:id="@+id/button3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/button2"
         android:layout_below="@+id/button2"
+        android:layout_centerHorizontal="true"
         android:layout_marginTop="46dp"
         android:text="@string/stopRecording" />
+
+    <Button
+        android:id="@+id/button2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/button3"
+        android:layout_centerVertical="true"
+        android:text="@string/startRecording" />
 
 </RelativeLayout>
