--- a/PubSubClient/res/layout/activity_register_me.xml
+++ b/PubSubClient/res/layout/activity_register_me.xml
@@ -44,5 +44,14 @@
         android:layout_alignLeft="@+id/button3"
         android:layout_centerVertical="true"
         android:text="@string/startRecording" />
+        
+        <Button
+        android:id="@+id/button5"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/button1"
+        android:layout_alignLeft="@+id/button1"
+        android:layout_alignRight="@+id/button1"
+        android:text="@string/uploadFile"/>
 
 </RelativeLayout>
