--- a/PubSubClient/res/layout/layout_publish_query.xml
+++ b/PubSubClient/res/layout/layout_publish_query.xml
@@ -170,14 +170,8 @@
             android:gravity="center"
             android:hint="in seconds"
             android:inputType="number" />
-
-        <Spinner
-            android:id="@+id/Spinner01"
-            android:layout_width="105dp"
-            android:layout_column="0"
-            android:layout_gravity="center_horizontal|top"
-            android:layout_row="36"
-            android:entries="@array/frequency_options" />
+        
+       
 
         <android.support.v7.widget.Space
             android:id="@+id/space8"
@@ -185,7 +179,6 @@
             android:layout_column="0"
             android:layout_gravity="left|top"
             android:layout_row="50" />
-
         <Button
             android:id="@+id/button1"
             android:layout_width="198dp"
@@ -382,6 +375,17 @@
             android:layout_row="18"
             android:text="@string/from"
             android:textStyle="bold" />
+
+        <EditText
+            android:id="@+id/editText7"
+            android:layout_width="105dp"
+            android:layout_column="0"
+            android:layout_gravity="center"
+            android:layout_row="36"
+            android:ems="10"
+            android:gravity="center"
+            android:hint="in seconds"
+            android:inputType="number" />
 
     </GridLayout>
 
