Basic end-to-end model except update subscription
What works:
- Accelerometer, GPS and Microphone data recorded according to query
timestamps
- Sent to server as XMPP message
- Requestor receives back the data message(s) and converts it to file

To fix:
- Update subscription

--- a/PubSubClient/res/layout/layout_publish_query.xml
+++ b/PubSubClient/res/layout/layout_publish_query.xml
@@ -208,7 +208,7 @@
         <CheckBox
             android:id="@+id/CheckBox02"
             android:layout_gravity="left"
-            android:text="@string/rot"
+            android:text="Microphone"
             android:textSize="13sp" />
 
         <CheckBox
